# usdc_sender

./: Anchor.toml  id.json  package-lock.json  package.json  readme.md
cli/: command.ts  scripts.ts
lib/: scripts.ts  types.ts  usdc_sender.ts  utils.ts
programs/usdc-sender/: Cargo.toml
programs/usdc-sender/src/: errors.rs  lib.rs  state.rs
programs/usdc-sender/src/instructions/: deposit_usdc.rs  initialize.rs  mod.rs  withdraw_admin.rs  withdraw_usdc.rs
programs/wallet_program/: Cargo.toml
programs/wallet_program/src/: constants.rs  error.rs  lib.rs
programs/wallet_program/src/instructions/: batch_withdraw.rs  deposit_sol.rs  deposit_usdc.rs  deposit_usdt.rs  forward_to_admin.rs  initialize.rs  mod.rs  proxy_swap_base_input.rs  proxy_swap_base_output.rs  transfer_to_exchange.rs  transfer_to_master.rs  withdraw.rs
programs/wallet_program/src/state/: mod.rs
tests/: usdc-sender.ts  wallet_program.ts
tests/src/: program.ts
tests/src/coder/: accounts.ts  instructions.ts
tests/utils/: raydiumAmm.ts
